<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_edit_image_knowledge" />

    </com.google.android.material.appbar.AppBarLayout>


    <me.gujun.android.taggroup.TagGroup
        android:id="@+id/tag_group"
        style="@style/TagGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_layout"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:atg_isAppendMode="true" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tag_group"
        android:background="@color/colorPrimary" />

    <com.guanmu.onehours.view.PaintView
        android:id="@+id/paint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:layout_above="@+id/button_set"/>

    <LinearLayout
        android:id="@id/button_set"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:gravity="center">

        <ToggleButton
            android:id="@+id/toggle_pen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textOff="@string/toggle_to_eraser"
            android:textOn="@string/toggle_to_pen"
            android:textSize="15sp" />

        <Button
            android:id="@+id/set_pen_width_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/set_pen_width"
            android:textSize="15sp" />
        <Button
            android:id="@+id/set_pen_color_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/set_pen_color"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>