<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:paddingTop="20dp"
              tools:context="com.guanmu.onehours.fragment.FragmentVerifyCode">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        card_view:cardCornerRadius="@dimen/login_input_corner"
        card_view:cardElevation="@dimen/elevation1"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <EditText
            android:id="@+id/verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/prompt_verify_code"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_verify_code_short"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/login_input_text_size"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/request_verify_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_request_verify"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <com.guanmu.onehours.view.LoadingView
        android:id="@+id/verify_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp">
    </com.guanmu.onehours.view.LoadingView>

</LinearLayout>
