<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"/>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        card_view:cardCornerRadius="@dimen/login_input_corner"
        card_view:cardElevation="@dimen/elevation1"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <AutoCompleteTextView
            android:id="@+id/phone_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/prompt_phone_number"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/login_input_text_size"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        card_view:cardCornerRadius="@dimen/login_input_corner"
        card_view:cardElevation="@dimen/elevation1"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/prompt_username"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/login_input_text_size"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        card_view:cardCornerRadius="@dimen/login_input_corner"
        card_view:cardElevation="@dimen/elevation1"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/login_input_text_size"/>
    </androidx.cardview.widget.CardView>

    <com.guanmu.onehours.view.LoadingView
        android:id="@+id/phone_mail_sign_in_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp">
    </com.guanmu.onehours.view.LoadingView>
    <!--<ImageButton-->
    <!--android:id="@+id/phone_mail_sign_in_button"-->
    <!--android:src="@drawable/"-->
    <!--style="?android:textAppearanceSmall"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:text="@string/action_sign_in"-->
    <!--android:textStyle="bold"/>-->

    <ImageButton
        android:id="@+id/qq_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_qq_login"
        android:contentDescription="@string/qq_login_button" />


</LinearLayout>